k8s/overlays/production/patch-volumes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  template:
    spec:
      containers:
        - name: gateway
          volumeMounts:
            - name: tls-secret
              mountPath: "/etc/ssl/certs"
              readOnly: true
      volumes:
        - name: tls-secret
          secret:
            secretName: comma-tls
